--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,52 +1,55 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Workout Tracker</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/style.css">
-</head>
+	<head>
+		<meta charset='UTF-8' />
+		<meta name='viewport' content='width=device-width, initial-scale=1.0' />
+		<title>My Workout Tracker</title>
+		<link
+			rel='stylesheet'
+			href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css'
+		/>
+		<link rel='stylesheet' href='/css/style.css' />
+	</head>
 
-<body>
-  <div class="flex-column justify-space-around">
-    <header class="display-flex justify-space-between align-center p-2">
-      <h1>
-        <span role="img" aria-label="weights">💸</span>
-        <a href="/">My Workout Tracker</a>
-      </h1>
-      <nav>
-        <!-- Conditionally render login or logout links -->
-        <!-- {{#if logged_in}} -->
-        <a href="/profile">profile</a> |
+	<body>
+		<div class='flex-column justify-space-around'>
+			<header class='display-flex justify-space-between align-center p-2'>
+				<h1>
+					<span role='img' aria-label='weights'>💸</span>
+					<a href='/'>My Workout Tracker</a>
+				</h1>
+				<nav>
+					<!-- Conditionally render login or logout links -->
+					<!-- {{#if logged_in}} -->
+        <a href="/profile" class="link-light">profile</a> |
         <button class="no-button" id="logout">logout</button>
         <!-- {{else}} -->
         <a href="/login">login</a>
         <!-- {{/if}} -->
-      </nav>
-    </header>
-    <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-    <main class="container container-fluid mt-5">
-      <!-- Render the sub layout -->
-      {{{ body }}} 
-    </main>
-    <footer>
-      
-    </footer>
-  </div>
+				</nav>
+			</header>
+			<div class='card' style='width: 18rem;'>
+				<img src='...' class='card-img-top' alt='...' />
+				<div class='card-body'>
+					<h5 class='card-title'>Card title</h5>
+					<p class='card-text'>Some quick example text to build on the card title and
+						make up the bulk of the card's content.</p>
+					<a href='#' class='btn btn-primary'>Go somewhere</a>
+				</div>
+			</div>
+			<main class='container container-fluid mt-5'>
+				<!-- Render the sub layout -->
+				{{{body}}}
+			</main>
+			<footer>
 
-  <!-- Render script for logged in users only -->
-  <!-- {{#if logged_in}} -->
+			</footer>
+		</div>
+
+		<!-- Render script for logged in users only -->
+		<!-- {{#if logged_in}} -->
   <script src="/js/logout.js"></script>
   <!-- {{/if}} -->
-</body>
+	</body>
 
 </html>
