--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,10 @@ a {
 	text-decoration: none;
 }
 
+a:hover {
+	opacity: 50%;
+}
+
 .custom-nav a {
 	padding-right: 5px;
 }
@@ -18,4 +22,12 @@ a {
 	border: 5px solid black;
 	background-color: lightgray;
 	text-align: center;
+	height: 17.5rem;
+}
+
+.card-custom input {
+	margin-top: 6px;
+	margin-bottom: 6px;
+	border-radius: 5px;
+	border: 1px solid black;
 }
