--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
 				<nav>
 					<!-- Conditionally render login or logout links -->
 					<!-- {{#if logged_in}} -->
-        <a href="/profile" class="link-light">profile</a> |
+        <a href="/profile">profile</a> |
         <button class="no-button" id="logout">logout</button>
         <!-- {{else}} -->
         <a href="/login">login</a>
@@ -32,8 +32,8 @@
 				<img src='...' class='card-img-top' alt='...' />
 				<div class='card-body'>
 					<h5 class='card-title'>Card title</h5>
-					<input type='text' />Some quick example text to build on the card title and
-					make up the bulk of the card's content.
+					<p class='card-text'>Some quick example text to build on the card title and
+						make up the bulk of the card's content.</p>
 					<a href='#' class='btn btn-primary'>Go somewhere</a>
 				</div>
 			</div>
