added login and signup forms and routing seeing on screen

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,10 +25,11 @@
         <button class="no-button" id="logout">logout</button>
         <!-- {{else}} -->
         <a href="/login">login</a>
+		<a href="/signup">signup</a>
         <!-- {{/if}} -->
 				</nav>
 			</header>
-			<div class='card' style='width: 18rem;'>
+			{{!-- <div class='card' style='width: 18rem;'>
 				<img src='...' class='card-img-top' alt='...' />
 				<div class='card-body'>
 					<h5 class='card-title'>Card title</h5>
@@ -36,7 +37,7 @@
 						make up the bulk of the card's content.</p>
 					<a href='#' class='btn btn-primary'>Go somewhere</a>
 				</div>
-			</div>
+			</div> --}}
 			<main class='container container-fluid mt-5'>
 				<!-- Render the sub layout -->
 				{{{body}}}
