--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -10,7 +10,7 @@
       </div>
       <div>
         <label for="email-input-signup">email-input-signup</label>
-        <input id="signup-password" />
+        <input id="signup-email" />
       </div>
       <div>
         <label for="password-input-signup">Password</label>
@@ -23,4 +23,4 @@
   </div>
 </div>
 
-<script src="/js/login.js"></script>
+<script src="/js/signup.js"></script>
