--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,12 +4,12 @@
   </div>
   <form id="login-form" class="card-body">
     <div>
-      <label for="username-input-login">Username</label>
-      <input type="text" id="username-input-login" />
+      <label for="email-input-login">Email</label>
+      <input type="text" id="login-email" />
     </div>
     <div>
       <label for="password-input-login" class="form-label">Password</label>
-      <input type="password" id="password-input-login" />
+      <input type="password" id="login-password" />
     </div>
     <button type="submit" id="login-btn" class="btn">Login!</button>
     <a type="button" href="/signup">Sign up instead</a>
