--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,8 @@
 		<meta charset='UTF-8' />
 		<meta name='viewport' content='width=device-width, initial-scale=1.0' />
 		<title>My Workout Tracker</title>
+
+		<link rel='stylesheet' href='./css/normalize.css' />
 		<link
 			rel='stylesheet'
 			href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css'
@@ -12,7 +14,10 @@
 	</head>
 
 	<body>
-		<div class='flex-column justify-space-around'>
+
+		{{!-- Old Code --}}
+
+		{{!-- <div class='flex-column justify-space-around'>
 			<header class='display-flex justify-space-between align-center p-2'>
 				<h1>
 					<span role='img' aria-label='weights'>💸</span>
@@ -21,17 +26,36 @@
 				<nav>
 					<!-- Conditionally render login or logout links -->
 					<!-- {{#if logged_in}} -->
-        <a href="/profile">profile</a> |
+        <a href="/profile">profile</a> --}}
+		
+		
+		
+		{{!-- New Code --}}
+
+
+		<div class="container-fluid sticky-top">
+			<div class="row align-items-center bg-dark pt-4 pb-2 mb-5">
+				<div class="col-sm-12 col-md-8 text-center">
+					<h1><a href="/" class="link-light">My Workout Tracker</a></h1>
+				</div>
+				<div class="col-sm-12 col-md-4 text-center custom-nav">
+					<!-- Conditionally render login or logout links -->
+					{{#if logged_in}}
+					
+						<a href="/profile" class="link-light">Profile</a>
+						<button class="" id="logout-button">logout</button>
+					{{else}}
+        				<a href="/login" id="logout-button" class="link-light">Login</a>
+		
+        			{{/if}}
+				</div>
+			</div>
+		</div> |
         
-		hello
-        <!-- {{else}} -->
-        <a href="/login">login</a>
-		<a href="/signup">signup</a>
-		<button class="" id="logout-button">logout</button>
-        <!-- {{/if}} -->
+     
 				</nav>
 			</header>
-			{{!-- <div class='card' style='width: 18rem;'>
+			{{! <div class='card' style='width: 18rem;'>
 				<img src='...' class='card-img-top' alt='...' />
 				<div class='card-body'>
 					<h5 class='card-title'>Card title</h5>
@@ -39,7 +63,7 @@
 						make up the bulk of the card's content.</p>
 					<a href='#' class='btn btn-primary'>Go somewhere</a>
 				</div>
-			</div> --}}
+			</div> }}
 			<main class='container container-fluid mt-5'>
 				<!-- Render the sub layout -->
 				{{{body}}}
@@ -50,9 +74,10 @@
 		</div>
 
 		<!-- Render script for logged in users only -->
-		<!-- {{#if logged_in}} -->
-  <!-- {{/if}} -->
+		{{#if logged_in}}
+			<script src='/js/logout.js'></script>
+  		{{/if}}
 	</body>
-  <script src="/js/logout.js"></script>
+
 
 </html>
