--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,1 +1,12 @@
-<h2>this is the profile page</h2>
+{{#each users}}
+	<div class='card' style='width: 18rem;'>
+		<div class='card-body'>
+			<h5 class='card-title'>Profile</h5>
+			<h6 class='card-subtitle mb-2 text-muted'> {{name}}</h6>
+			<p class='card-text'>Some quick example text to build on the card title and
+				make up the bulk of the card's content.</p>
+			<a href='#' class='card-link'>Card link</a>
+			<a href='#' class='card-link'>Another link</a>
+		</div>
+	</div>
+{{/each}}
