--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,8 @@
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+/* Link Styles */
+
 a {
 	text-decoration: none;
 }
@@ -18,11 +20,25 @@ a:hover {
 	border-right: 1px solid white;
 }
 
+/* Input Styles */
+
+#user-workout {
+	width: 90%;
+	background-color: ghostwhite;
+}
+
+.stats-input {
+	width: 30%;
+	background-color: ghostwhite;
+}
+
+/* Card Styles */
+
 .card-custom {
 	border: 5px solid black;
 	background-color: lightgray;
 	text-align: center;
-	height: 17.5rem;
+	/* height: 17.5rem; */
 }
 
 .card-custom input {
@@ -30,4 +46,9 @@ a:hover {
 	margin-bottom: 6px;
 	border-radius: 5px;
 	border: 1px solid black;
+}
+
+.workout-card {
+	border-width: 1px;
+	background-color: white;
 }
