--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,12 +1,61 @@
-{{#each users}}
-	<div class='card' style='width: 18rem;'>
-		<div class='card-body'>
-			<h5 class='card-title'>Profile</h5>
-			<h6 class='card-subtitle mb-2 text-muted'> {{name}}</h6>
-			<p class='card-text'>Some quick example text to build on the card title and
-				make up the bulk of the card's content.</p>
-			<a href='#' class='card-link'>Card link</a>
-			<a href='#' class='card-link'>Another link</a>
+<div class='container-fluid'>
+	<div class='row'>
+		<div class='col-sm-12 col-md-6 pb-5'>
+			<div class='card card-custom'>
+				<div class='card-body'>
+					<h5 class='card-title'>Recent Workouts
+					</h5>
+					<br />
+					<div class='container-fluid'>
+						<div class='row'>
+							<div class='col-6'>
+								<div class='card card-custom workout-card'>
+									<div class='card-body'>
+										<h6 class='card-title'>Workout
+										</h6>
+										<input type='text' placeholder='Workout Name' id='user-workout' />
+									</div>
+								</div>
+							</div>
+							<div class='col-6'>
+								<div class='card card-custom workout-card'>
+									<div class='card-body'>
+										<h6 class='card-title'>Stats
+										</h6>
+										<input
+											type='text'
+											placeholder='Sets'
+											id='user-sets'
+											class='stats-input'
+										/>
+										<input
+											type='text'
+											placeholder='Reps'
+											id='user-reps'
+											class='stats-input'
+										/>
+										<input
+											type='text'
+											placeholder='Weight'
+											id='user-weight'
+											class='stats-input'
+										/>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class='col-sm-12 col-md-6 pb-5'>
+			<div class='card card-custom'>
+				<div class='card-body'>
+					<h5 class='card-title'>Stats Graph
+					</h5>
+					<br />
+				</div>
+			</div>
 		</div>
 	</div>
-{{/each}}
+</div>
