--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -7,7 +7,7 @@
 					</h5>
 					<br />
 					<div class='container-fluid'>
-						<div class='row'>
+						<form class='row new-workout-form'>
 							<div class='col-6'>
 								<div class='card card-custom workout-card'>
 									<div class='card-body'>
@@ -40,10 +40,12 @@
 											id='user-weight'
 											class='stats-input'
 										/>
+
 									</div>
 								</div>
 							</div>
-						</div>
+							<button type='submit' class='hide'>Submit</button>
+						</form>
 					</div>
 				</div>
 			</div>
@@ -59,3 +61,5 @@
 		</div>
 	</div>
 </div>
+
+<script src='./js/profile.js'></script>
