chart is working again

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -74,8 +74,8 @@
 		<div class='col-sm-12 col-md-6 pb-5'>
 			<div class='card card-custom'>
 				<div class='card-body'>
-					<h5 class='card-title'>Stats Graph
-					</h5>
+					<h5 class='card-title'>Stats Graph</h5>
+          <canvas id="workoutChart"/>
 					<br />
 				</div>
 			</div>
