--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -45,45 +45,46 @@
                       class="stats-input"
                     />
 
+                  </div>
+                </div>
+              </div>
+              <button type="submit" class="hide">Submit</button>
+            </form>
+            {{#if workouts.length}}
+              <div class="col-md-6 blog-list">
+                <h3>Workouts</h3>
 
-									</div>
-								</div>
-							</div>
-							<button type='submit' class='hide'>Submit</button>
-						</form>
-						{{#if workouts.length}}
-							<div class='col-md-6 blog-list'>
-								<h3>Workouts</h3>
-
-								{{#each workouts as |workout|}}
-									<div class=''>
-										<div class=''>
-											<h4><a href='/workouts/{{workout.id}}'>{{workout.name}}</a></h4>
-										</div>
-										<div class=''>
-											<button class='' data-id='{{workout.id}}'>DELETE</button>
-										</div>
-									</div>
-								{{/each}}
-							</div>
-						{{/if}}
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class='col-sm-12 col-md-6 pb-5'>
-			<div class='card card-custom'>
-				<div class='card-body'>
-					<h5 class='card-title'>Stats Graph
-					</h5>
-					<br />
-				</div>
-			</div>
-		</div>
-	</div>
+                {{#each workouts as |workout|}}
+                  <div class="">
+                    <div class="">
+                      <h4><a
+                          href="/workouts/{{workout.id}}"
+                        >{{workout.name}}</a></h4>
+                    </div>
+                    <div class="">
+                      <button class="" data-id="{{workout.id}}">DELETE</button>
+                    </div>
+                  </div>
+                {{/each}}
+              </div>
+            {{/if}}
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-12 col-md-6 pb-5">
+      <div class="card card-custom">
+        <div class="card-body">
+          <h5 class="card-title">Stats Graph
+          </h5>
+          <br />
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
-
+{{! 
           <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
           <script>
@@ -117,4 +118,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> }}
