--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,7 +53,13 @@ a:hover,
 	border: 1px solid black;
 }
 
-.workout-card {
+.input-card {
+	padding: 1rem;
+	margin-bottom: 1rem;
+}
+
+.workout-card,
+.input-card {
 	border-width: 1px;
 	background-color: white;
 }
