--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -88,7 +88,7 @@
 </div>
 
 
-          <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+          <script src="./js/downloaded-chart.js"></script>
 
         </div>
       </div>
